# a0-bitwarden-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  execute.py  hooks.py  plugin.yaml  plugin_imports.py  pyproject.toml
.github/workflows/: ci.yml
ci/: collect_versions.py  run_agent_zero_integration.sh  run_mcp_config_smoke.py  run_setup_smoke.py  run_skill_smoke.py  run_uninstall_restore.py
extensions/python/_functions/helpers/plugins/toggle_plugin/start/: _50_uninstall_when_disabled.py
helpers/: __init__.py  config.py  dependency_install.py  diagnostics.py  install_manifest.py  mcp_settings.py  redaction.py  setup.py  skills.py  uninstall.py
skills/bitwarden-credential-vault/: SKILL.md
tests/unit/: test_dependency_install.py  test_execute.py  test_hooks.py  test_mcp_settings.py  test_redaction_manifest.py  test_repository_layout.py  test_skills.py  test_toggle_extension.py
