[project]
name = "a0-bitwarden-plugin"
version = "1.0.0"
description = "Agent Zero plugin for Bitwarden CLI, MCP, and credential-vault skills"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
